--- a/config.toml
+++ b/config.toml
@@ -21,5 +21,5 @@ url = "https://linkedin.com/in/bmtaylor"
 
 [[params.ananke_socials]]
 name = "mastodon"
-url = "https://infosec.exhange/@bmt626"
+url = "https://infosec.exchange/@bmt626"
 rel = "me noopener"
